[ISSUE-11028] Refine module access API design
Move module access logic from ClassRealm into ClassWorld to encapsulate
the Controller. Add addExports/addOpens/addReads to the API interface as
default methods returning boolean for success feedback. Synchronize
setModuleLayer. Support add-reads in module-access descriptors and log
on failure.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>